# libSGM

./: CMakeLists.txt
src/: CMakeLists.txt  sgm-config.cmake.in
